# MiniPP_R

./: .clang-format  CoreXApp.tag
_script/: _build_rdkafka.py  build_dependency.py  build_service.py
cpp/: CMakeLists.txt
cpp/src_app/: CMakeLists.txt
cpp/src_app/common/: base.cpp
cpp/src_app/fake_auth_service/: _main.cpp
cpp/src_app/lib_backend_connection/: backend_connection.cpp  backend_connection.hpp  backend_connection_pool.cpp  backend_connection_pool.hpp
cpp/src_app/lib_server_util/: all.hpp  base.hpp  cache_manager.cpp  cache_manager.hpp  collectable_error_printer.cpp  collectable_error_printer.hpp  command_line.cpp  command_line.hpp  passive_server_id_client.cpp  passive_server_id_client.hpp  rdkafka_wrapper.cpp  rdkafka_wrapper.hpp  runtime_env.cpp  runtime_env.hpp  server_id_client.cpp  server_id_client.hpp  server_id_manager.cpp  server_id_manager.hpp  service_client_hash_pool.cpp  service_client_hash_pool.hpp  service_common.cpp  service_common.hpp
cpp/src_app/observer_device_info/: _global.cpp  _global.hpp  _main.cpp
cpp/src_app/server_audit_account/: _global.cpp  _global.hpp  _main.cpp  register_server_client.cpp  register_server_client.hpp
cpp/src_app/server_audit_device/: _global.cpp  _global.hpp  register_server_client.cpp  register_server_client.hpp
cpp/src_app/server_audit_device_backend_reporter/: _main.cpp
cpp/src_app/server_audit_dispatcher/: _main.cpp
cpp/src_app/server_auth_cache/: _global.cpp  _global.hpp  _main.cpp  auth_cache.cpp  auth_cache.hpp  auth_service.cpp  auth_service.hpp  register_server_client.cpp  register_server_client.hpp
cpp/src_app/server_auth_dispatcher/: _main.cpp  dispatcher.cpp  dispatcher.hpp  dispatcher_input.cpp  dispatcher_output.cpp  dispatcher_output.hpp
cpp/src_app/server_config_center/: _config.cpp  _config.hpp  _global.cpp  _global.hpp  _main.cpp  backend_server_manager.cpp  backend_server_manager.hpp  challenge.cpp  challenge.hpp  ip_location.cpp  ip_location.hpp  pa_config.cpp  pa_config.hpp  relay_server_manager.cpp  relay_server_manager.hpp  relay_server_service.cpp  relay_server_service.hpp
cpp/src_app/server_config_center_root/: _main.cpp
cpp/src_app/server_device_recorder/: _global.cpp  _main.cpp  device_context_manager.cpp  device_context_manager.hpp
cpp/src_app/server_device_selector/: _global.cpp  _global.hpp  _main.cpp  device_context_manager.cpp  device_context_manager.hpp  device_selector.cpp  device_selector.hpp
cpp/src_app/server_device_state_relay/: _global.cpp  _global.hpp  _main.cpp
cpp/src_app/server_proxy_access/: _global.cpp  _global.hpp  _local_audit.cpp  _local_audit.hpp  _main.cpp  _mindef.hpp  auth_request_manager.cpp  auth_request_manager.hpp  client_auth_cache.cpp  client_auth_cache.hpp  client_auth_cache_manager.cpp  client_auth_cache_manager.hpp  client_connection_manager.cpp  client_connection_manager.hpp  client_udp_socket_manager.cpp  client_udp_socket_manager.hpp  device_selector_manager.cpp  device_selector_manager.hpp  relay_connection_manager.cpp  relay_connection_manager.hpp  relay_server_list_manager.cpp  relay_server_list_manager.hpp  test_relay_connection_manager.cpp  test_relay_connection_manager.hpp
cpp/src_app/server_relay_device/: _config.cpp  _config.hpp  _global.cpp  _global.hpp  _main.cpp  connection.cpp  connection.hpp  device_manager.cpp  device_manager.hpp  device_reporter.cpp  device_reporter.hpp  proxy_connection_manager.cpp  (+7 more)
cpp/src_lib_common/: CMakeLists.txt
cpp/src_lib_component/: CMakeLists.txt
cpp/src_lib_component/pp_component/: base.hpp
cpp/src_lib_component/pp_component/server_list/: server_list.cpp  server_list.hpp
cpp/src_lib_protocol/: CMakeLists.txt
cpp/src_test/: CMakeLists.txt
cpp/src_test/cpp/: main.cpp
cpp/src_test/fake_client/: _main.cpp
cpp/src_test/ip2loc/: main.cpp
cpp/src_test/protocol/: main.cpp
cpp/src_test/request_id_pool/: main.cpp
cpp/src_test/server_id_client/: main.cpp
cpp/src_test/server_list/: _main.cpp
cpp/src_test/udp_echo/: _main.cpp
run/: all.sh  cc.sh  ka.sh  rd.sh
(+95 files in other folders)
